# sql_analyzer

./: .gitignore  pyproject.toml  schema_explorer.py  sql_analyzer.md
backend/: llm.py
ui/: page_config.py
