[tool.poetry]
name = "sqlanalyzer"
version = "0.1.0"
description = "Tool to analyze schemas and discover relationships in tables"
authors = ["Guilherme Diaz-Berrio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.15"
sqlfluff = "^2.1.0"
sqlparse = "^0.4.4"
openai = "^0.27.7"
networkx = "^3.1"
python-dotenv = "^1.0.0"
pyodbc = "^4.0.39"
psycopg2 = "^2.9.6"
pandas = "^2.0.2"
streamlit = "^1.24.1"
llama-index = "^0.7.17"
langchain = "^0.0.254"
pydantic = "1.10.8"
supabase = "1.0.3"
unstructured = "^0.9.0"
tiktoken = "^0.4.0"
replicate = "^0.10.0"
lmql = "^0.0.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
